Aggiornata altaformazione con contributo di Paolo

--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -58,57 +58,88 @@
         <section id="master" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
-                    <img class="img-fluid" src=http://lezioni.meneghetti.univr.it//imageapi/41/m0041_0visn18_0012a1.jp2/pct:27.50,10.00,34.50,70.67/pct:30/0/default.jpg alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                    <img class="img-fluid" src={{url_for('static',filename='imgs/dantesummer.png')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>MASTER DI SECONDO LIVELLO</h6>
-                    <h1>Master in Scienze storiche, filologiche e tecnologie fisiche applicate allo studio e la conservazione dei beni culturali</h1>
-                    <p>Comitato scientifico: Massimiliano Bassetti, Fabio Coden, Carlo Combi, Claudia Daffara, Paolo de Paolis, Edoardo Ferrarini, Tiziana Franco, Paolo Pellegrini, Maria Clara Rossi, Paolo Scattolin, Arnaldo Soldani, Marco Stoffella</p>
+                    <h6>SUMMER SCHOOL</h6>
+                    <h1>Scuola estiva internazionale in studi danteschi </h1>
                     <p>
-                    Il corso, la cui attivazione è prevista per l’ottobre del 2021, intende formare figure
-                     altamente professionali nei settori strategici della tutela, promozione e valorizzazione
-                      dei beni archivistici e bibliotecari. In tal senso il Master offre formazione e 
-                      aggiornamento professionale per archivisti, bibliotecari, addetti agli istituti 
-                      culturali preposti alla tutela, promozione e valorizzazione dei beni archivistici e 
-                      librari (soprattutto antichi e moderni).</p>
-                    <p>Il Master si propone di offrire ai frequentanti una formazione specialistica, 
-                        garantita da un equilibrato bilanciamento tra lezioni teoriche e attività 
-                        pratico-esercitative, potendo contare sull’ineguagliabile patrimonio, librario e 
-                        archivistico, reso disponibile dalla Biblioteca Capitolare di Verona e dalle 
-                        restanti istituzioni di conservazione cittadine. Tale formazione insisterà sulle 
-                        tecniche per guidano attraverso l’osservazione analitica, lo studio, la comprensione,
-                        la valorizzazione e la promozione del patrimonio archivistico e bibliotecario 
-                        dall'Antichità all'età contemporanea. Una specifica attenzione sarà riservata, 
-                        con alcuni moduli di insegnamento dedicati, agli sviluppi ermeneutici portati dalle
-                        metodologie informatiche (che hanno rivoluzionato sia il settore dei beni 
-                        archivistico-librari, sia quello della ricerca) e dalle tecniche di analisi 
-                        diagnostico-strumentale applicate al libro e al documento antico e medievale.
-                    </p>
-
-                    <p>
-                        Sia i docenti coinvolti, sia quelli che compongono il comitato scientifico del Master
-                        afferiscono al Laboratorio di Studi Medievali e Danteschi, incardinato nel 
-                        Dipartimento di Culture e civiltà. Questo laboratorio è la cellula in cui si sviluppa
-                        il progetto di catalogazione scientifica, digitalizzazione e indagine diagnostica a carico 
-                        dei beni librari e archivistici conservati dalla Biblioteca Capitolare di Verona.
-                        Questa circostanza garantisce la più stretta circolarità tra il momento della ricerca
-                        applicata e la didattica offerta dal Master, attraverso la valorizzazione di un fondo 
-                        di conservazione libraria e documentaria unico al mondo.
+                        La <a href=https://www.univrmagazine.it/2020/07/03/torna-la-scuola-estiva-internazionale-in-studi-danteschi/>Scuola estiva internazionale in Studi danteschi </a>propone agli 
+                        iscritti una settimana residenziale di corsi, seminari e conferenze,
+                        per scoprire più da vicino, con l’aiuto di illustri specialisti,
+                        la figura del- l’Alighieri, le sue opere, il suo pensiero.
+                        La solida collaborazione tra l'<a href=https://progetti.unicatt.it/progetti-milan-studi-danteschi-home>Università Cattolica</a> e il Centro 
+                        Dantesco dei Frati Minori Conventuali di Ravenna, dal 2015 ampliata
+                        all’Università di Verona, assicura una formazione altamente 
+                        qualificata. La Scuola offre a studenti e docenti un momento prezioso 
+                        di scambio di esperienze, un arricchimento reciproco per comprendere 
+                        più a fondo la complessità e la grandezza dell’ “altissimo poeta”.
 
                     </p>
                     <p>
-                        Tra i possibili sbocchi professionali si colloca la carriera nel settore della ricerca
-                        e dell'università, grazie alle specifiche competenze, sia scientifiche sia gestionali,
-                        sia comunicative sia tecnologiche, offerte dal Master.
-
-                    </p>
-                    <p>
-                        La pagina sarà aggiornata quanto prima con la pubblicazione del piano di studi.
+                        <a href="https://docs.univr.it/documenti/Iniziativa/dall/dall526320.pdf" class="btn btn-info" role="button" target="_blank">Edizione 2019</a>
+                        <a href="https://progetti.unicatt.it/progetti-milan-Locandina%20Scuola%20estiva%20internazionale%20in%20Studi%20danteschi%202020.pdf" class="btn btn-info" role="button" target="_blank">Edizione 2020 </a>
                     </p>
                   </div>
                 </div>
               </section>
 
+              <section id="master" class="illaboratorio  py-5 ">
+                <div class="row align-items-center container py-5 mx-auto">
+                      <div class="text col-lg-6 col-md-12 col-12">
+                        <h6>MASTER DI SECONDO LIVELLO</h6>
+                        <h1>Master in Scienze storiche, filologiche e tecnologie fisiche applicate allo studio e la conservazione dei beni culturali</h1>
+                        <p>Comitato scientifico: Massimiliano Bassetti, Fabio Coden, Carlo Combi, Claudia Daffara, Paolo de Paolis, Edoardo Ferrarini, Tiziana Franco, Paolo Pellegrini, Maria Clara Rossi, Paolo Scattolin, Arnaldo Soldani, Marco Stoffella</p>
+                        <p>
+                        Il corso, la cui attivazione è prevista per l’ottobre del 2021, intende formare figure
+                         altamente professionali nei settori strategici della tutela, promozione e valorizzazione
+                          dei beni archivistici e bibliotecari. In tal senso il Master offre formazione e 
+                          aggiornamento professionale per archivisti, bibliotecari, addetti agli istituti 
+                          culturali preposti alla tutela, promozione e valorizzazione dei beni archivistici e 
+                          librari (soprattutto antichi e moderni).</p>
+                        <p>Il Master si propone di offrire ai frequentanti una formazione specialistica, 
+                            garantita da un equilibrato bilanciamento tra lezioni teoriche e attività 
+                            pratico-esercitative, potendo contare sull’ineguagliabile patrimonio, librario e 
+                            archivistico, reso disponibile dalla Biblioteca Capitolare di Verona e dalle 
+                            restanti istituzioni di conservazione cittadine. Tale formazione insisterà sulle 
+                            tecniche per guidano attraverso l’osservazione analitica, lo studio, la comprensione,
+                            la valorizzazione e la promozione del patrimonio archivistico e bibliotecario 
+                            dall'Antichità all'età contemporanea. Una specifica attenzione sarà riservata, 
+                            con alcuni moduli di insegnamento dedicati, agli sviluppi ermeneutici portati dalle
+                            metodologie informatiche (che hanno rivoluzionato sia il settore dei beni 
+                            archivistico-librari, sia quello della ricerca) e dalle tecniche di analisi 
+                            diagnostico-strumentale applicate al libro e al documento antico e medievale.
+                        </p>
+    
+                        <p>
+                            Sia i docenti coinvolti, sia quelli che compongono il comitato scientifico del Master
+                            afferiscono al Laboratorio di Studi Medievali e Danteschi, incardinato nel 
+                            Dipartimento di Culture e civiltà. Questo laboratorio è la cellula in cui si sviluppa
+                            il progetto di catalogazione scientifica, digitalizzazione e indagine diagnostica a carico 
+                            dei beni librari e archivistici conservati dalla Biblioteca Capitolare di Verona.
+                            Questa circostanza garantisce la più stretta circolarità tra il momento della ricerca
+                            applicata e la didattica offerta dal Master, attraverso la valorizzazione di un fondo 
+                            di conservazione libraria e documentaria unico al mondo.
+    
+                        </p>
+                        <p>
+                            Tra i possibili sbocchi professionali si colloca la carriera nel settore della ricerca
+                            e dell'università, grazie alle specifiche competenze, sia scientifiche sia gestionali,
+                            sia comunicative sia tecnologiche, offerte dal Master.
+    
+                        </p>
+                        <p>
+                            La pagina sarà aggiornata quanto prima con la pubblicazione del piano di studi.
+                        </p>
+                      </div>
+                    
+                      <div class="img col-lg-6 col-md-12 col-12">
+                        <img class="img-fluid" src=http://lezioni.meneghetti.univr.it//imageapi/41/m0041_0visn18_0012a1.jp2/pct:27.50,10.00,34.50,70.67/pct:30/0/default.jpg alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                      </div>
+                    
+                    </div>
+
+                  </section>
 
         <div>
     </div>
