Aggiustata nav bar

--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -7,6 +7,7 @@
         <div class="sidenav">
             <p><b>Indice:</b></p>
             <a href="#summer">Verona International Summer School in Medieval Manuscripts</a>
+            <a href="#summerdante">Scuola estiva internazionale in studi danteschi</a>
             <a href="#master">Master in Scienze storiche, filologiche e tecnologie fisiche applicate allo studio e la conservazione dei beni culturali</a>
      
         </div>
@@ -55,7 +56,7 @@
             </div>
           </section>
 
-        <section id="master" class="illaboratorio  py-5 ">
+        <section id="summerdante" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
                     <img class="img-fluid" src={{url_for('static',filename='imgs/dantesummer.png')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
