--- a/templates/bootstraptable2.html
+++ b/templates/bootstraptable2.html
@@ -120,20 +120,27 @@ RESULTS TABLE
         <thead>
             <tr>
                 <!--special characters and spaces not allowed in data-field name-->
-                <th data-field="Titolo" data-filter-control="input" data-sortable="true">Titolo</th>
-                <th data-field="Materiale" data-filter-control="select" data-sortable="true">Materiale </th>
                 <th data-field="Segnatura" data-filter-control="input" data-sortable="true">Segnatura</th>
-                <th data-field="Descrizione" data-filter-control="input" data-sortable="true" data-visible="false">Descrizione</th>
+                <th data-field="Datazione" data-filter-control="input" data-sortable="true">Datazione</th>
+                <th data-field="Materiale" data-filter-control="select" data-sortable="true">Materiale </th>
+                
+                <th data-field="Consistenza" data-filter-control="input" data-sortable="true" data-visible="false">Consistenza</th>
+                <th data-field="Numerazione carte" data-filter-control="input" data-sortable="true" data-visible="false">Numerazione carte</th>
+                <th data-field="Prospetto fascicolazione" data-filter-control="input" data-sortable="true" data-visible="false">Prospetto fascicolazione</th>
+
             </tr>
         </thead>
         <tbody>
           {% for row in tableA %}
           <tr>
               <!--special characters and spaces not allowed in data-field name-->
-              <td>{{ row['descrizione_interna'][0]['titolo'] }}</td>
+              <td>{{ row['descrizione_esterna'][0]['Segnatura'] }}</td>
+              <td>{{ row['descrizione_esterna'][0]['datazione'] }}</td>
               <td>{{ row['descrizione_esterna'][0]['tipo_di_supporto_e_qualita'] }}</td>
-              <td>{{ row['descrizione_esterna'][0]['Segnatura'] }}</td>
-              <td>{{ row['descrizione_esterna'][0]['Segnatura'] }}</td>
+              <!--non visibili  -->
+              <td>{{ row['descrizione_esterna'][0]['consistenza'] }}</td>
+              <td>{{ row['descrizione_esterna'][0]['numerazione_carte']|safe }}</td>
+              <td>{{ row['descrizione_esterna'][0]['prospetto_fascicolazione']|safe }}</td>
           </tr>
           {% endfor %}
         </tbody>
