Update research page

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,8 +27,7 @@
         <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=17AS0VmzVTH5n04pYBGr_E0vEuRFV87MkfrjzQk6zxg4&font=Default&lang=it&timenav_position=top&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>        
         <section id="storia" class="storia  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
-                
-                <div class="text col-lg-6 col-md-12 col-12">
+            <div class="text col-lg-6 col-md-12 col-12">
                     <h6>DALLO STUDIO ALLA CONSERVAZIONE</h6>
                     <h1>Storia del progetto</h1>
                         Il progetto mosse i primi passi nel 2017 a partire da un progetto di ricerca di base finanziato dall’Ateneo di Verona 
@@ -42,19 +41,36 @@
                         crescendo, investendo dunque anche il Complesso dell’Archivio del Capitolo. Per la sua realizzazione 
                         del progetto furono acquistati hardware, software, supporti per l’archiviazione di metadati, 
                         attrezzature fotografiche e di precisione che costituirono il primo nucleo del Laboratorio, 
-                        inizialmente collocato in una stanza attigua al salone Arcidiacono Pacifico e appositamente allestita. I primi, incoraggianti risultati del progetto hanno indotto l’Ateneo, con delibera del Consiglio di Amministrazione del 1 febbraio 2019, a investire ulteriori ingenti risorse per l’acquisto di strumentazione più performante e per assicurare il personale necessario a supporto delle attività di ricerca: il progetto DascabiDa è così confluito nel neonato Laboratorio di studi Medievali e Danteschi (LaMeDan) del Dipartimento di Culture e Civiltà. Con la fattiva collaborazione del Sistema Bibliotecario di Ateneo e dell’Ufficio Tecnico dell’Università di Verona, è stata quindi progettata una nuova sala consultazione all’interno della Biblioteca Capitolare, da realizzare al secondo piano dell’edificio che già ospitava la vecchia sala, accanto alla quale sarebbe sorto il nuovo Laboratorio di diagnostica e digitalizzazione. A tale scopo l’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
-                        le due istituzioni. La nuova sala consultazione e il nuovo laboratorio sono stati portati a termine in tempi record, attrezzati secondo tutti gli standard di sicurezza e funzionalità richiesti dalla normativa vigente, con un collegamento internet veloce direttamente connesso alla rete e alle banche dati di Ateneo messi
-
-gratuitamente a disposizione di tutti gli utenti che si registreranno presso la sala consultazione stessa. Il progetto vede attualmente impegnati, oltre ai docenti del LaMeDan (afferenti ai due dipartimenti di Culture e Civilità e di Informatica), un tecnologo, un bibliotecario dell’Università di Verona, due assegnisti di ricerca e una dottoranda, che collaborano a vario titolo nella gestione degli strumenti del Laboratorio e del sito web, e nella descrizione dei manoscritti e dei documenti dell’archivio.
+                        inizialmente collocato in una stanza attigua al salone Arcidiacono Pacifico e appositamente allestita. I primi, incoraggianti risultati del progetto hanno indotto l’Ateneo, con delibera del Consiglio di Amministrazione del 1 febbraio 2019, a investire ulteriori ingenti risorse per l’acquisto di strumentazione più performante e per assicurare il personale necessario a supporto delle attività di ricerca: il progetto DascabiDa è così confluito nel neonato Laboratorio di studi Medievali e Danteschi (LaMeDan) del Dipartimento di Culture e Civiltà.
+                        Con la fattiva collaborazione del Sistema Bibliotecario di Ateneo e dell’Ufficio Tecnico dell’Università di Verona, è stata quindi progettata una nuova sala consultazione all’interno della Biblioteca Capitolare, da realizzare al secondo piano dell’edificio che già ospitava la vecchia sala, accanto alla quale sarebbe sorto il nuovo Laboratorio di diagnostica e digitalizzazione. 
+                        
+     
                         </p>
               </div>
-              <div class="img col-lg-6 col-md-12 col-12">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
-
-            </div>
+            <div class="img col-lg-6 col-md-12 col-12">
+                <div class="embed-responsive embed-responsive-4by3">
+                    <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                </div>
             </div>
           </section>
 
+        <section id="convenzione" class="illaboratorio  py-5 ">
+            <div class="row align-items-center container py-5 mx-auto">
+                <div class="img col-lg-6 col-md-12 col-12">
+                <div class="embed-responsive embed-responsive-4by3">
+                    <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube.com/embed/eKSemEt2PNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+                  <div class="text col-lg-6 col-md-12 col-12">
+                    <p>
+                        A tale scopo l’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
+                        le due istituzioni. La nuova sala consultazione e il nuovo laboratorio sono stati portati a termine in tempi record, attrezzati secondo tutti gli standard di sicurezza e funzionalità richiesti dalla normativa vigente, con un collegamento internet veloce direttamente connesso alla rete e alle banche dati di Ateneo messi 
+                        gratuitamente a disposizione di tutti gli utenti che si registreranno presso la sala consultazione stessa. Il progetto vede attualmente impegnati, oltre ai docenti del LaMeDan (afferenti ai due dipartimenti di Culture e Civilità e di Informatica), un tecnologo, un bibliotecario dell’Università di Verona, due assegnisti di ricerca e una dottoranda, che collaborano a vario titolo nella gestione degli strumenti del Laboratorio e del sito web, e nella descrizione dei manoscritti e dei documenti dell’archivio.
+                    </p>
+                  </div>
+                </div>
+              </section>
         <section id="illaboratorio" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
