--- a/templates/index2.html
+++ b/templates/index2.html
@@ -61,7 +61,7 @@ window.onload = function(){
       <p>
       Il sito capitolar-e mette a disposizione ad accesso aperto la digitalizzazione di risorse della Biblioteca Capitolare di Verona: un aggiornato catalogo dei manoscritti associato alle riproduzioni dei codici, il catalogo storico dei manoscritti e l’archivio del Capitolo dei canonici e di altri fondi qui conservati.
       <br>
-      <h5>Nuovo catalogo digitale </h5>
+      <h5><a href="/ricerca">Nuovo catalogo digitale </a> </h5>
         Il nuovo catalogo digitale, realizzato secondo i più aggiornati standard scientifici, è il cuore del progetto. 
         La visualizzazione delle riproduzioni ad altissima definizione avviene attraverso le 
         sue schede, che permettono di identificare tutte le unità interne dei codici e di 
