Ricerca catalgo su navbar

--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -23,10 +23,10 @@
             Applicativi 
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/esplora">Catalogo storico</a></li>
+            <li><a class="dropdown-item" href="/esplora">Catalogo storico A. Spangolo</a></li>
             <li><a class="dropdown-item" href="/archivio">Archivio delle pergamene</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="/ricerca"">Ricerca nuovo catalogo</a></li>
           </ul>
         </li>
 <!--         <li class="nav-item active">
