Aggiunti link immagini dorso

--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -4,13 +4,13 @@
 <br>
 
   <div class="manbanner">
-  <img src="http://lezioni.meneghetti.univr.it//imageapi/LXI/m0061_0visn20_0009a2.jp2/pct:2,18,80,7/800,/0/default.jpg" class="img-fluid mb5" id="imgmanu">
+  <img src="{{codice['immagine_banner']}}" class="img-fluid mb5" id="imgmanu">
   <div class="mantext">{{codice['descrizione_esterna'][0]['Segnatura']}}</div>
 
   <table class="table">
       <tr>
       <td style="width:  2.33%">
-        <img src="http://lezioni.meneghetti.univr.it//imageapi/LXI/m0061_0visn20_0000a2.jp2/1312,104,1904,7776/90,/180/default.jpg"  class="rounded mx-auto d-block" >
+        <img src="{{codice['immagine_dorso']}}"  class="rounded mx-auto d-block" >
       </td>
       <td style="width:  10.33%" >
 
