--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,14 +68,14 @@
 <!--     <body data-bs-spy="scroll" data-bs-target="#navbarCapi" data-bs-offset="150" tabindex="0">-->
 
 <body data-bs-offset="150" tabindex="0">
-  <br> <br>
-  <div class="alert alert-danger" role="alert">
+ <!--  <br> <br> -->
+  <!-- <div class="alert alert-danger" role="alert">
     <p>
     Questo è un sito di prova con contenuti preliminari, le informazioni riportate potrebbero non essere accurate ed alcune funzionalità non essere disponibili.
     </p><p>
     This is a test website. The content might not be accurate and functional.
   </p>
-  </div>
+  </div> -->
   {% block body %}
 {% endblock body %}
 
