--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -16,44 +16,7 @@
             <a href="#bknd">Back-end</a>
         </div>
         <div class="col-md-7 col-sm-6">
-        <section id="intr">
-        <h3>Open-data</h3>
-        <p>
-            
-        </p>
-        </section>
-        <section id="oai">
-            <h3> Open Archive Initiative</h3>
-            <p>
-                Se non lo si è già fatto si consiglia di scorrere la <a href="\">home</a>
-                del sito che funge da tutorial introduttivo alle funzionalità principali. Il sito è pensato per aiutare il lavoro degli studiosi che studiano la collezione
-                o beni specifici di essa. 
-            </p>
-        </section>
-        <section id="ark">
-            <h3>>Archival Resource Key (ARK)</h3>
-            <p></p>
-        </section>
-        <section id="iiif">
-            <h3> Sfruttare il protocollo IIIF</h3>
-            <p></p>
-        </section>
-        <section id="rice">
-            <h3> Ricerca avanzata</h3>
-            <p></p>
-        </section>
-        <section id="cita">
-            <h3> Citare i manoscritti (Zotero)</h3>
-            <p></p>
-        </section>
-        <section id="aapi">
-            <h3> Acesso alle API</h3>
-            <p></p>
-        </section>
-        <section id="bknd">
-            <h3> Back-end</h3>
-            <p></p>
-        </section>
+                <object  data="https://zenodo.org/communities/pptg/search?page=1&size=20" ></object>
         <div>
     </div>
 </div>
