--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -22,7 +22,7 @@
                   <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#Fac-similes" role="tab" aria-controls="Fac-similes" aria-selected="false">Fac-similes</a>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                  <a class="nav-link" id="analisi-tab" data-bs-toggle="tab" href="#analisi" role="tab" aria-controls="analisi" aria-selected="false">Analisi</a>
                 </li>
             </ul>
 
@@ -401,13 +401,13 @@ for (i = 0; i < acc.length; i++) {
             <table>
             <tr>
             <tr><td><b>Tipologia:</b></td><td>Copia digitale</td></tr>
-            <tr><td><b>Manifest:</b></td><td><a href="default_target?manifest=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json" target="_blank">
+            <tr><td><b>Manifest:</b></td><td><a href="default_target?manifest={{codice['manifest']}}" target="_blank">
               <img src={{url_for('static', filename="imgs/iiificon.png")}} alt="IIIF Drag-n-drop"/>
-            </a> <a href=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json class="manifesturl">http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json</a></td></tr>
-            <tr><td><b>Visualizzabile con:</b></td><td> <a href=http://lezioni.meneghetti.univr.it:8085/?manifest=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json target="_blank">Universal viewer</a> <a href=http://lezioni.meneghetti.univr.it/m3/?manifest=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json target="_blank">Mirador</a>  </td></tr>
+            </a> <a href={{codice['manifest']}} class="manifesturl">{{codice['manifest']}}</a></td></tr>
+            <tr><td><b>Visualizzabile con:</b></td><td> <a href=http://lezioni.meneghetti.univr.it/UVjs/?manifest={{codice['manifest']}} target="_blank">Universal viewer</a> <a href=http://lezioni.meneghetti.univr.it/m3/?manifest={{codice['manifest']}} target="_blank">Mirador</a>  </td></tr>
         </table>
         </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        <div class="tab-pane fade" id="analisi" role="tabpanel" aria-labelledby="analisi-tab">...</div>
             
       </td>
       <td style="width:  10.33%" ></td>
