--- a/templates/bootstraptable2.html
+++ b/templates/bootstraptable2.html
@@ -15,6 +15,13 @@
     $( "#anno" ).val($( "#slider-range" ).slider( "values", 0 ) +
       " - " + $( "#slider-range" ).slider( "values", 1 ) + " d.C."  );
   } );
+  $( document ).ready(function() {
+    window.onload = setTimeout(function() {
+    var x = document.getElementsByClassName("detail-icon");
+    x.forEach(element =>element.click())
+    }, 1000);
+  });
+
   </script>
 {% endblock script_section %}
 
