--- a/templates/index2.html
+++ b/templates/index2.html
@@ -11,7 +11,7 @@ window.onload = function(){
 {% include 'includes/carousel.html' %}
 <section id="about" class="about py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
-    <div class="text col-lg-6 col-md-12 col-12">
+    <div class="text col-lg-6 col-md-12 col-12 bg-white">
       <h1>IL PROGETTO</h1>
       <h2>Insieme per proteggere, digitalizzare e valorizzare</h2>
       <p>
@@ -97,17 +97,20 @@ window.onload = function(){
 
 <section id="formazione" class="about py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
-    <div class="text col-lg-6 col-md-12 col-12">
+    <div class="text col-lg-6 col-md-12 col-12 ">
       <h6>FORMAZIONE E DIVULGAZIONE</h6>
       <h1>Alta formazione e prodotti della ricerca</h1>
       <p>
         Il progetto dissemina i risultati  e le conoscenze acquisite attraverso diverse modalità per 
         raggiungere gli studiosi ed il grande pubblico. 
       </p>
-      <p>
-        Consulta i vari link per ottenere maggiori informazioni sull'<a href=/altaformazione>offerta formativa</a>, 
-        le <a href=/prodottidellaricerca>pubblicazioni</a> open-access ed una lista delle apparizioni sui <a href=/media>media</a>.
-      </p>
+      Consulta le varie sezioni per ottenere maggiori informazioni su:
+    <div class="list-group">
+      <a href=/altaformazione class="list-group-item list-group-item-action">Offerta formativa</a>
+      <a href="/prodottidellaricerca" class="list-group-item list-group-item-action">Pubblicazioni e contenuti open-access</a>
+      <a href="/media" class="list-group-item list-group-item-action">Apparizioni sui media</a>
+    </div>
+     
  <!--   <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
         ha iniziato una campagna di analisi, digitalizzazione e valorizzazione
         dei beni culturali contenuti all'interno della Biblioteca Capitolare di Verona.
