--- a/templates/media.html
+++ b/templates/media.html
@@ -33,7 +33,7 @@
         </div>  
         
      
-        <section id="tg2" class="storia  py-5 ">
+        <section id="tg2" class="storia  py-5  esplora">
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
@@ -59,22 +59,21 @@
         </section>
         <section id="tg3" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
-                <div class="img col-lg-6 col-md-12 col-12">
-                    <img class="img-fluid" src={{url_for('static',filename='imgs/TG3.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
-                  </div>
+
                   <div class="text col-lg-6 col-md-12 col-12">
                     <h6>SERVIZIO TELEVISIVO</h6>
                     <h1>TG3 Regione Veneto e Rai News</h1>
                     <p>L'inizio del primo progetto pilota nel 2018, ha raccolto l'interesse della stampa
                         che ha dedicato un servizio andato in onda sul <a href=https://www.rainews.it/dl/rainews/TGR/media/ven-Verona-Biblioteca-Capitolare-manoscritti-b368a937-a75d-42a3-89b9-3af5bfaf69af.html>TgR Veneto</a>.
                     </p>
-                    
-
+                  </div>
+                  <div class="img col-lg-6 col-md-12 col-12">
+                    <img class="img-fluid" src={{url_for('static',filename='imgs/TG3.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
                   </div>
                 </div>
               </section>
 
-        <section id="telepace" class="storia  py-5 ">
+        <section id="telepace" class="storia  py-5 esplora ">
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
