Types and removed text

--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -44,7 +44,7 @@
                 </p>
                 <p>
                     La nostra <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">comunity di Zenodo</a> offre l'accesso ed il download 
-                    di diversi contenuti open-access.
+                    di diversi contenuti open-access facilmente citabili dagli utilizzatori finali.
                 </p>
                 <p>
                     Attraverso il protocollo <a href="https://www.openarchives.org/pmh/">OAI-PMH</a> è inoltre possibile accedere alle <a href="https://zenodo.org/oai2d?verb=ListRecords&set=user-bibliotecacapitolareveronaunivr&metadataPrefix=oai_dc">API per la raccolta dei metadati</a>.
