--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -16,10 +16,21 @@
             <br>
             <h1>Alta formazione</h1>
             <blockquote class="blockquote">
-                “... longum iter est per praecept, breve et efficax per exampla.”
+            Iniziative per la formazione degli studiosi
             </blockquote>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+              Il laboratorio è attivo nella formazione e degli studiosi organizzando
+              e promuovendo iniziative nazionali ed internazionali.
+            </p>
+            <p>
+              Queste iniziative comprendono: <i>Verona International Summer School in Medieval Manuscripts</i>
+              nelle sue due edizione 2019 e 2020 e la Scuola estiva internazionale in studi danteschi tenutasi
+              nel 2019 e nel 2020. 
+            </p>
+            <p>
+              Dal successo riscontrato e dall'esperienza maturata si è quindi proceduto alla
+              progettazione di un Master di secondo livello che fornisse allo studioso in una formazione
+              ed una impostazione metodologica più completa.
             </p>
             <!-- <p>
             Per avere informazioni più dettagliate per la visita della Biblioteca Capitolare e del museo diocesano,
